# feeder_zhida_daapi_v_1.0

./: .gitignore  CMakeLists.txt  ChangeLog.md  Dockerfile  Makefile
conf/: feeder.yaml
lib/DAAPI_v1.15/include/: DADataType.h  DAFutureApi.h  DAFutureStruct.h  DAMarketApi.h  DAMarketStruct.h  DAStockApi.h  DAStockStruct.h
lib/DAAPI_v1.15/lib/x64/: DAApi_x64.lib  _DAApi_x64.lib
lib/DAAPI_v1.15/lib/x86/: DAApi.lib  _DAApi.lib
src/: config.cc  config.h  daapi_server.cc  daapi_server.h  define.h  main.cc  md_buffer.cc  md_buffer.h  md_callback.cc  md_callback.h
